--- a/mypokedb/src/index.css
+++ b/mypokedb/src/index.css
@@ -127,3 +127,120 @@
     }
   }
 }
+
+.generator {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
+
+  .generator__title {
+    font-size: 2rem;
+  }
+
+  .generator__form {
+    width: 100%;
+    display: flex;
+    gap: .5rem;
+
+    .generator__input {
+      padding: 1rem;
+    }
+
+    .generator__input--text {
+      flex: 7;
+    }
+
+    .generator__input--number {
+      flex: 1;
+    }
+
+    .generator__button {
+      flex: 1;
+      padding: 1rem;
+      cursor: pointer;
+    }
+  }
+
+  .generator__list {
+    width: 100%;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+
+    .card {
+      border: 1px solid black;
+      border-radius: 10px;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: .5rem;
+      cursor: pointer;
+      transition: all .2s ease-in-out;
+
+      .card__top {
+        width: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .card__img {
+          width: 50%;
+          padding: 1rem;
+          border-radius: 50%;
+        }
+
+        .card__index {
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 3rem;
+          aspect-ratio: 1;
+          background-color: #FFCC05;
+          border-radius: 50%;
+        }
+      }
+
+      .card__middle {
+        text-align: center;
+      }
+
+      .card__bottom {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        .card__stat {
+          border-bottom: 1px solid black;
+          padding: .5rem;
+          font-weight: 700; 
+        }
+
+        .card__stat--span-two {
+          grid-column: auto / span 2;
+          text-align: center;
+        }
+      }
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
+
+  .search__title {
+    font-size: 2rem;
+  }
+}
